--- a/tox.ini
+++ b/tox.ini
@@ -28,18 +28,16 @@ show_missing = True
 [tox]
 envlist =
     checkqa,
-    py{36,37,38}-dj{22-extras,30-extras,31}
+    py{38,39,310,311}-dj{31,32,42}
 
 [testenv]
 passenv = CI CIRCLECI CIRCLE_*
 deps =
     coverage<5
     codecov
-    dj22-extras: Django>=2.2,<3.0
-    dj22-extras: django-jsonfield-backport>=1.0.0,<2
-    dj30-extras: Django>=3.0,<3.1
-    dj30-extras: django-jsonfield-backport>=1.0.0,<2
     dj31: Django>=3.1,<3.2
+    dj32: Django>=3.2,<3.3
+    dj42: Django>=4.2,<4.3
 
 usedevelop = True
 commands =
